# trade-system-0

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: architecture.html  architecture.md  trading-system-template.md
scripts/: init_sync.sh  requirements.txt  start-desktop.sh  sync_kline.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  agent_patch.rs  ai_score.rs  annotation.rs  data_ops.rs  kline.rs  mod.rs  provider.rs  review.rs  stock_meta.rs  trade_system.rs  watchlist.rs  watchlist_ops.rs
src-tauri/src/db/: duckdb.rs  migrations.rs  mod.rs  sqlite.rs
src-tauri/src/kline/: aggregate.rs  http.rs  mod.rs  provider.rs  sample.rs
src-tauri/src/llm/: client.rs  json_guard.rs  mod.rs  prompts.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: agent_patch_service.rs  agent_service.rs  ai_score_service.rs  annotation_service.rs  common.rs  csv_import_service.rs  kline_import_service.rs  kline_query_service.rs  kline_sync_service.rs  market_sync_service.rs  material_service.rs  mod.rs  model_provider_service.rs  review_service.rs  trade_system_service.rs  watchlist_service.rs
src/app/: App.test.tsx  App.tsx  queryClient.ts  routes.tsx
src/lib/: agentChat.ts  commands.ts  format.ts  types.ts  useStockViewModel.ts  (+1 more)
workflows/: ai-opinion-article.yaml  douyin-script.yaml
(+53 files in other folders)
