[package]
name = "trade-system-0"
version = "0.1.0"
description = "Local-first trading system desktop MVP"
authors = ["trade-system-0"]
edition = "2021"

[lib]
name = "trade_system_0_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.10502.0", features = ["bundled"] }
pdf-extract = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
